# track1-token-router

./: .dockerignore  .env.example  .gitignore  CREDIT_ACTIVATION.md  Dockerfile  Dockerfile.championship  KICKOFF_CHECKLIST.md  Makefile  README.md  SUBMISSION.md  pyproject.toml
adapters/: README.md
cli/: README.md
configs/: amd-return-manifest-v1.json  championship-shadow-policy-v1.json  code-verifier-policy-v1.json  distribution-scenarios-v1.json  dual-functiongemma-policy-v1-candidate.json  dual-functiongemma-policy-v1-promoted.json  dual-functiongemma-policy-v1.json  e2b-270m-matrix-regression.json  e2b-category-matrix-regression-v2.json  e2b-extra-trees-code-debug-v1.json  e2b-local-adjudication-v2-candidate.json  e2b-local-adjudication-v2.json  e2b-regression-judge-policy.json  e2b-regression-v2-corpus.json  e2b-regression-v2-label-policy.json  e2b-regression-v2-runtime.json  e2b-route-policy-v1.json  e2b-selective-policy-contract-v2-candidate.json  e2b-selective-policy-v1.json  e2b-tool-policy-v1.json  engine-matrix-judge-policy.json  engine-outcome-models-v1.json  fireworks-baseline-judge-policy.json  fireworks-intent-policy-v1.json  fireworks-intent-policy-v2.json  fireworks-intent-policy-v3.json  functiongemma-scale789-q8-calibration.json  functiongemma-scale789-q8-manifest.json  functiongemma-scale789-q8-runtime.json  functiongemma-semantic-v3-q8-manifest.json  functiongemma-semantic-v3.json  functiongemma-sprint46.json  functiongemma-tool-planner-v1.json  grounded-verifier-policy-v1.json  local-adjudication-policy-v1.json  proof-verifier-policy-v1.json  (+2 more)
(+815 files in other folders)
